@@ -1,0 +1,125 @@
+/*******************************************************************************
+ * Copyright (c) 2024 Obeo.
+ * This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License v2.0
+ * which accompanies this distribution, and is available at
+ * https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
+ *
+ * Contributors:
+ *     Obeo - initial API and implementation
+ *******************************************************************************/
+package org.eclipse.syson.diagram.general.view.edges;
+
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Objects;
+
+import org.eclipse.emf.ecore.EClass;
+import org.eclipse.emf.ecore.EReference;
+import org.eclipse.sirius.components.view.builder.IViewDiagramElementFinder;
+import org.eclipse.sirius.components.view.builder.generated.ChangeContextBuilder;
+import org.eclipse.sirius.components.view.builder.providers.IColorProvider;
+import org.eclipse.sirius.components.view.diagram.ArrowStyle;
+import org.eclipse.sirius.components.view.diagram.DiagramDescription;
+import org.eclipse.sirius.components.view.diagram.EdgeDescription;
+import org.eclipse.sirius.components.view.diagram.EdgeStyle;
+import org.eclipse.sirius.components.view.diagram.LineStyle;
+import org.eclipse.sirius.components.view.diagram.NodeDescription;
+import org.eclipse.sirius.components.view.diagram.SynchronizationPolicy;
+import org.eclipse.syson.diagram.common.view.edges.AbstractEdgeDescriptionProvider;
+import org.eclipse.syson.diagram.general.view.nodes.ActorNodeDescriptionProvider;
+import org.eclipse.syson.util.AQLConstants;
+import org.eclipse.syson.util.IDescriptionNameGenerator;
+import org.eclipse.syson.util.SysMLMetamodelHelper;
+import org.eclipse.syson.util.ViewConstants;
+
+/**
+ * Used to create the edge description between elements and their nested actors in General View.
+ *
+ * @author gdaniel
+ */
+public class NestedActorEdgeDescriptionProvider extends AbstractEdgeDescriptionProvider {
+
+    private final IDescriptionNameGenerator nameGenerator;
+
+    private final EClass eClass;
+
+    private final EReference eReference;
+
+    private final String edgeName;
+
+    public NestedActorEdgeDescriptionProvider(EClass eClass, EReference eReference, IColorProvider colorProvider, IDescriptionNameGenerator nameGenerator) {
+        super(colorProvider);
+        this.nameGenerator = Objects.requireNonNull(nameGenerator);
+        this.eClass = Objects.requireNonNull(eClass);
+        this.eReference = Objects.requireNonNull(eReference);
+        this.edgeName = this.nameGenerator.getEdgeName("Nested Actor " + this.eClass.getName());
+    }
+
+    @Override
+    public EdgeDescription create() {
+        String domainType = SysMLMetamodelHelper.buildQualifiedName(this.eClass);
+        return this.diagramBuilderHelper.newEdgeDescription()
+                .domainType(domainType)
+                .isDomainBasedEdge(false)
+                .name(this.edgeName)
+                .centerLabelExpression("")
+                .sourceNodesExpression(AQLConstants.AQL_SELF)
+                .style(this.createEdgeStyle())
+                .synchronizationPolicy(SynchronizationPolicy.SYNCHRONIZED)
+                .targetNodesExpression(AQLConstants.AQL_SELF + "." + this.eReference.getName())
+                .build();
+    }
+
+    @Override
+    public void link(DiagramDescription diagramDescription, IViewDiagramElementFinder cache) {
+        var optEdgeDescription = cache.getEdgeDescription(this.edgeName);
+        var optUsageNodeDescription = cache.getNodeDescription(ActorNodeDescriptionProvider.NAME);
+        var sourceNodes = new ArrayList<NodeDescription>();
+
+        cache.getNodeDescription(this.nameGenerator.getNodeName(this.eClass)).ifPresent(sourceNodes::add);
+
+        EdgeDescription edgeDescription = optEdgeDescription.get();
+        diagramDescription.getEdgeDescriptions().add(edgeDescription);
+        edgeDescription.getSourceNodeDescriptions().addAll(sourceNodes);
+        edgeDescription.getTargetNodeDescriptions().add(optUsageNodeDescription.get());
+
+        edgeDescription.setPalette(this.createEdgePalette());
+    }
+
+    private EdgeStyle createEdgeStyle() {
+        return this.diagramBuilderHelper.newEdgeStyle()
+                .borderSize(0)
+                .color(this.colorProvider.getColor(ViewConstants.DEFAULT_EDGE_COLOR))
+                .edgeWidth(1)
+                .lineStyle(LineStyle.SOLID)
+                .sourceArrowStyle(ArrowStyle.NONE)
+                .targetArrowStyle(ArrowStyle.NONE)
+                .build();
+    }
+
+    @Override
+    protected boolean isDeletable() {
+        // This edge cannot be deleted. This would mean that the existing actor is not contained in an
+        // UseCase/Requirement anymore, and should likely be represented as a regular part, which is not possible out of
+        // the box.
+        return false;
+    }
+
+    @Override
+    protected ChangeContextBuilder getSourceReconnectToolBody() {
+        var params = List.of(AQLConstants.SEMANTIC_RECONNECTION_TARGET, AQLConstants.SEMANTIC_OTHER_END);
+        return this.viewBuilderHelper.newChangeContext()
+                .expression(AQLConstants.AQL + AQLConstants.EDGE_SEMANTIC_ELEMENT + ".reconnectSourceNestedActorEdge(" + String.join(",", params) + ")");
+    }
+
+    @Override
+    protected ChangeContextBuilder getTargetReconnectToolBody() {
+        // It is not possible to reconnect the target (actor) of this edge. This would mean that the existing actor is
+        // not contained in a UseCase/Requirement anymore.
+        return this.viewBuilderHelper.newChangeContext();
+    }
+
+}
