@@ -117,6 +117,8 @@ Actors are represented with a stick figure image, with their label displayed bel
 
 image::release-notes-actor-representation.png[Actor node on the General View diagram]
 
+- Add support for edges between actors and their containing UseCase/Requirement in the General View diagram.
+The source of the edge (the UseCase or Requirement) can be reconnected to another UseCase or Requirement, but the target (Actor) cannot be reconnected.
 
 == New features
 
